<resources>
    <string name="app_name">KotlinGames</string>

    <string name="quiz_score">QuizScore</string>
    <string name="count_score">CountScore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_count">CountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="select_animal">Select the animal</string>
    <string name="how_many_animals">How many %1$s?</string>
    <string name="Start">Start</string>
    <string name="OK">OK</string>
    <string name="sheep">Sheep</string>
    <string name="cat">Cat</string>
    <string name="counting_animals">Counting Animals</string>
    <string name="score">Score</string>
    <string name="exit">Exit</string>
    <string name="quiz">Quiz</string>
    <string name="_60">60</string>
    <string name="back">Back</string>

</resources>