<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CountFragment">

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:text="@string/Start"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.282" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="286dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_sheep"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="0dp"
            android:minHeight="48dp"
            android:text="@string/sheep" />

        <RadioButton
            android:id="@+id/radio_cat"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp"
            android:minWidth="0dp"
            android:text="@string/cat" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_animal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/_60"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/animalImage1"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/wooloo"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <ImageView
        android:id="@+id/animalImage2"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/wooloo"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <ImageView
        android:id="@+id/animalImage3"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/wooloo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/animalImage4"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/wooloo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/animalImage5"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/wooloo"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />
</androidx.constraintlayout.widget.ConstraintLayout>